--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,24 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: ticketly
     volumes:
-      - './data:/var/lib/postgresql/data'
+      - './docket/data:/var/lib/postgresql/data'
     ports:
       - '5432:5432'
+    networks:
+      - backend
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: [ "CMD", "rabbitmqctl", "status" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - backend
+
+networks:
+  backend:
